Closed
Bug 1369878
Opened 8 years ago
Closed 8 years ago
Crash in mozilla::net::HttpBackgroundChannelParent::LinkToChannel
Categories
(Core :: Networking, defect)
Tracking
()
RESOLVED
FIXED
mozilla55
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox53 | --- | unaffected |
| firefox54 | --- | unaffected |
| firefox55 | --- | fixed |
People
(Reporter: philipp, Assigned: schien)
References
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug was filed from the Socorro interface and is
report bp-31140a84-8a7c-44ed-8c7a-e45790170602.
=============================================================
Crashing Thread (0)
Frame Module Signature Source
0 xul.dll mozilla::net::HttpBackgroundChannelParent::LinkToChannel(mozilla::net::HttpChannelParent*) netwerk/protocol/http/HttpBackgroundChannelParent.cpp:104
1 xul.dll mozilla::net::BackgroundChannelRegistrar::NotifyChannelLinked(mozilla::net::HttpChannelParent*, mozilla::net::HttpBackgroundChannelParent*) netwerk/protocol/http/BackgroundChannelRegistrar.cpp:42
2 xul.dll mozilla::net::BackgroundChannelRegistrar::LinkBackgroundChannel(unsigned __int64, mozilla::net::HttpBackgroundChannelParent*) netwerk/protocol/http/BackgroundChannelRegistrar.cpp:93
3 xul.dll mozilla::net::ContinueAsyncOpenRunnable::Run() netwerk/protocol/http/HttpBackgroundChannelParent.cpp:59
4 xul.dll nsThread::ProcessNextEvent(bool, bool*) xpcom/threads/nsThread.cpp:1321
5 xul.dll NS_ProcessNextEvent(nsIThread*, bool) xpcom/threads/nsThreadUtils.cpp:472
6 xul.dll nsThread::Shutdown() xpcom/threads/nsThread.cpp:1031
7 xul.dll mozilla::LazyIdleThread::ShutdownThread() xpcom/threads/LazyIdleThread.cpp:303
8 xul.dll mozilla::LazyIdleThread::Shutdown() xpcom/threads/LazyIdleThread.cpp:482
9 xul.dll mozilla::widget::JumpListBuilder::Observe(nsISupports*, char const*, char16_t const*) widget/windows/JumpListBuilder.cpp:521
10 xul.dll nsObserverList::NotifyObservers(nsISupports*, char const*, char16_t const*) xpcom/ds/nsObserverList.cpp:112
11 xul.dll nsObserverService::NotifyObservers(nsISupports*, char const*, char16_t const*) xpcom/ds/nsObserverService.cpp:281
12 xul.dll nsXREDirProvider::DoShutdown() toolkit/xre/nsXREDirProvider.cpp:1107
13 xul.dll ScopedXPCOMStartup::~ScopedXPCOMStartup() toolkit/xre/nsAppRunner.cpp:1445
14 xul.dll mozilla::UniquePtr<ScopedXPCOMStartup, mozilla::DefaultDelete<ScopedXPCOMStartup> >::reset(ScopedXPCOMStartup*) obj-firefox/dist/include/mozilla/UniquePtr.h:345
15 xul.dll XREMain::XRE_main(int, char** const, mozilla::BootstrapConfig const&) toolkit/xre/nsAppRunner.cpp:4779
16 xul.dll XRE_main(int, char** const, mozilla::BootstrapConfig const&) toolkit/xre/nsAppRunner.cpp:4846
17 firefox.exe NS_internal_main(int, char**, char**) browser/app/nsBrowserApp.cpp:309
18 firefox.exe wmain toolkit/xre/nsWindowsWMain.cpp:115
19 firefox.exe __scrt_common_main_seh f:/dd/vctools/crt/vcstartup/src/startup/exe_common.inl:253
20 kernel32.dll BaseThreadInitThunk
21 ntdll.dll RtlUserThreadStart
this crash signature is regressing in today's 55.0a1 build 20170602030204and looks related to the landing of bug 1015466.
| Assignee | ||
Comment 1•8 years ago
|
||
Quick diagnosis.
1. Happen during shutdown mostly
2. Hit a MOZ_DIAGNOSTIC_ASSERT I introduced in bug 1015466
This assertion should be simply removed.
Assignee: nobody → schien
| Comment hidden (mozreview-request) |
Comment 3•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8874075 [details]
Bug 1369878 - background channel might be closed in the middle of init procedure during shutdown.
https://reviewboard.mozilla.org/r/145540/#review149476
Attachment #8874075 -
Flags: review?(honzab.moz) → review+
Pushed by schien@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/9b7b1057cfc6
background channel might be closed in the middle of init procedure during shutdown. r=mayhemer
Comment 5•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in
before you can comment on or make changes to this bug.
Description
•