Bug 1369878 - background channel might be closed in the middle of init procedure during shutdown. r=mayhemer

MozReview-Commit-ID: L1Om8h4fBfU